--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ robots.txt
 
 *.patch
 src/config/modelProviders/openai.ts
+src/config/modelProviders/openai.ts
+src/config/modelProviders/openai.ts
