--- a/.github/workflows/docker-image-nightly.yml
+++ b/.github/workflows/docker-image-nightly.yml
@@ -1,9 +1,11 @@
-name: Docker Nightly Image CI
+name: Publish Docker Image
 
 on:
   schedule:
     - cron: '0 1 * * *'
   workflow_dispatch:
+  release:
+    types: [published]
 
 jobs:
   push_to_registry:
@@ -18,28 +20,21 @@ jobs:
           username: ${{ secrets.DOCKER_REGISTRY_USER }}
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: yangclivia/lobe-chat
-          tags: |
-            type=raw,value=latest
-            type=ref,event=tag
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
+      - name: Get the date
+        run: echo "TODAY=$(date +'%Y%m%d')" >> $GITHUB_ENV
+
+      - name: Build and push Docker image with `latest` tag and nightly tag
+        uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ github.event.inputs.tag || 'nightly' }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          tags: yangclivia/lobe-chat:latest, yangclivia/lobe-chat:nightly-${{ env.TODAY }}
+          platforms: linux/amd64,linux/arm64
+          cache-from: type=gha, prefix=lobe-chat
+          cache-to: type=gha, prefix=lobe-chat, mode=max
