Revert "Merge branch 'main' into default"
This reverts commit e7b132cd03bdd54b201c3d71be4f247ae7e8e8b6, reversing
changes made to 619ca4f2bf76d49e0da429d981f2139c43ab2ce9.

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,9 @@ robots.txt
 src/config/modelProviders/openai.ts
 src/config/modelProviders/openai.ts
 src/config/modelProviders/openai.ts
+src/config/modelProviders/ollama.ts
+src/config/modelProviders/openai.ts
+src/config/modelProviders/zhipu.ts
+src/config/modelProviders/ollama.ts
+src/config/modelProviders/openai.ts
+src/config/modelProviders/zhipu.ts
