--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,9 +2,11 @@ name: Publish Docker Image
 
 on:
   workflow_dispatch:
-  release:
-    types: [published]
-
+  push:
+    branches:
+      - main
+    tags:
+      - v*
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
