--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -67,20 +67,14 @@ jobs:
           username: ${{ secrets.DOCKER_REGISTRY_USER }}
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: yangclivia/lobe-chat
-        tags: |
-            type=raw,value=latest
-            type=ref,event=tag
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - name: Get the date
+        run: echo "TODAY=$(date +'%Y%m%d')" >> $GITHUB_ENV
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
@@ -88,7 +82,7 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: yangclivia/lobe-chat:latest, yangclivia/lobe-chat:nightly-${{ env.TODAY }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
