--- a/Dockerfile.other
+++ b/Dockerfile.other
@@ -4,7 +4,6 @@ FROM node:20-slim AS base
 FROM base AS sharp
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-ENV NEXT_PUBLIC_BASE_PATH=/yubb
 RUN corepack enable
 
 WORKDIR /app
@@ -15,18 +14,37 @@ RUN pnpm add sharp
 FROM base AS builder
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-ENV NEXT_PUBLIC_BASE_PATH=/yubb
 RUN corepack enable
 
 WORKDIR /app
 
 COPY package.json ./
+COPY .npmrc ./
 
 # If you want to build docker in China
 # RUN npm config set registry https://registry.npmmirror.com/
 RUN pnpm i
 
 COPY . .
+
+ENV NEXT_PUBLIC_BASE_PATH ""
+
+# Sentry
+ENV NEXT_PUBLIC_SENTRY_DSN ""
+ENV SENTRY_ORG ""
+ENV SENTRY_PROJECT ""
+
+# Posthog
+ENV NEXT_PUBLIC_ANALYTICS_POSTHOG ""
+ENV NEXT_PUBLIC_POSTHOG_KEY ""
+ENV NEXT_PUBLIC_POSTHOG_HOST ""
+
+# Umami
+ENV NEXT_PUBLIC_ANALYTICS_UMAMI ""
+ENV NEXT_PUBLIC_UMAMI_SCRIPT_URL ""
+ENV NEXT_PUBLIC_UMAMI_WEBSITE_ID ""
+
+
 RUN pnpm run build:docker # run build standalone for docker version
 
 ## Production image, copy all the files and run next
@@ -60,13 +78,13 @@ ENV PORT=3210
 
 # General Variables
 ENV ACCESS_CODE ""
-ENV CUSTOM_MODELS ""
 
 ENV API_KEY_SELECT_MODE ""
 
 # OpenAI
 ENV OPENAI_API_KEY ""
 ENV OPENAI_PROXY_URL ""
+ENV OPENAI_MODEL_LIST ""
 
 # Azure OpenAI
 ENV USE_AZURE_OPENAI ""
@@ -84,6 +102,7 @@ ENV MOONSHOT_API_KEY ""
 
 # Ollama
 ENV OLLAMA_PROXY_URL ""
+ENV OLLAMA_MODEL_LIST ""
 
 # Perplexity
 ENV PERPLEXITY_API_KEY ""
@@ -96,5 +115,22 @@ ENV MISTRAL_API_KEY ""
 
 # OpenRouter
 ENV OPENROUTER_API_KEY ""
+ENV OPENROUTER_MODEL_LIST ""
+
+# 01.AI
+ENV ZEROONE_API_KEY ""
+
+# TogetherAI
+ENV TOGETHERAI_API_KEY ""
+
+# Minimax
+ENV MINIMAX_API_KEY ""
+
+# Minimax
+ENV MINIMAX_API_KEY ""
+
+# CLERK
+ENV NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_aG90LWJvYmNhdC03NC5jbGVyay5hY2NvdW50cy5kZXYk
 
 CMD ["node", "server.js"]
+
