--- a/.github/workflows/docker-other.yml
+++ b/.github/workflows/docker-other.yml
@@ -2,8 +2,11 @@ name: Publish other Docker Image
 
 on:
   workflow_dispatch:
-  release:
-    types: [published]
+  push:
+    branches:
+      - main
+    tags:
+      - v*
 
 jobs:
   push_to_registry:
