--- a/Dockerfile.other
+++ b/Dockerfile.other
@@ -29,9 +29,6 @@ COPY . .
 
 ENV NEXT_PUBLIC_BASE_PATH ""
 
-# CLERK
-ENV NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_live_Y2xlcmsuY2xpdmlhLmZ1biQ
-
 # Sentry
 ENV NEXT_PUBLIC_SENTRY_DSN ""
 ENV SENTRY_ORG ""
@@ -46,9 +43,13 @@ ENV NEXT_PUBLIC_POSTHOG_HOST ""
 ENV NEXT_PUBLIC_ANALYTICS_UMAMI ""
 ENV NEXT_PUBLIC_UMAMI_SCRIPT_URL ""
 ENV NEXT_PUBLIC_UMAMI_WEBSITE_ID ""
+ENV NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_live_Y2xlcmsuY2xpdmlhLmZ1biQ
 
+# Node
+ENV NODE_OPTIONS "--max-old-space-size=8192"
 
-RUN pnpm run build:docker # run build standalone for docker version
+# run build standalone for docker version
+RUN npm run build:docker
 
 ## Production image, copy all the files and run next
 FROM base AS runner
@@ -81,6 +82,7 @@ ENV PORT=3210
 
 # General Variables
 ENV ACCESS_CODE ""
+ENV NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_live_Y2xlcmsuY2xpdmlhLmZ1biQ
 
 ENV API_KEY_SELECT_MODE ""
 
@@ -129,8 +131,10 @@ ENV TOGETHERAI_API_KEY ""
 # Minimax
 ENV MINIMAX_API_KEY ""
 
-# Minimax
-ENV MINIMAX_API_KEY ""
+# DeepSeek
+ENV DEEPSEEK_API_KEY ""
+
+# Qwen
+ENV QWEN_API_KEY ""
 
 CMD ["node", "server.js"]
-
