--- a/.github/workflows/docker-other.yml
+++ b/.github/workflows/docker-other.yml
@@ -25,7 +25,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: yangclivia/lobe-chat
+          images: lfglfg11/lobe-chat
           tags: |
             type=raw,value=yubb-latest
             type=ref,event=tag
