--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,7 +24,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: yangclivia/lobe-chat
+          images: lfglfg11/lobe-chat
           tags: |
             type=raw,value=latest
             type=ref,event=tag
