--- a/Dockerfile.other
+++ b/Dockerfile.other
@@ -43,7 +43,10 @@ ENV NEXT_PUBLIC_POSTHOG_HOST ""
 ENV NEXT_PUBLIC_ANALYTICS_UMAMI ""
 ENV NEXT_PUBLIC_UMAMI_SCRIPT_URL ""
 ENV NEXT_PUBLIC_UMAMI_WEBSITE_ID ""
+
+# clerk
 ENV NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_live_Y2xlcmsuY2xpdmlhLmZ1biQ
+ENV NEXT_PUBLIC_DISABLE_CLERK_SIGN_UP=false
 
 # Node
 ENV NODE_OPTIONS "--max-old-space-size=8192"
