--- a/Dockerfile.other
+++ b/Dockerfile.other
@@ -14,6 +14,7 @@ RUN pnpm add sharp
 FROM base AS builder
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
+ENV NEXT_PUBLIC_DISABLE_CLERK_SIGN_UP=1
 RUN corepack enable
 
 WORKDIR /app
